--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   dropdown_button2: ^1.8.9
   flutter_slidable: ^2.0.0
   smooth_page_indicator: ^1.0.0+2
+  http: ^0.13.5
+  fluttertoast: ^8.1.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
